--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,14 @@
   font-family: sans-serif;
   height: 100vh;
   justify-content: center;
-  width: 100%;
+  margin: 0 auto;
+  width: 100vw;
 }
 
-.rocksGlass {
+/* .rocksGlass {
   animation: shake 1s infinite ease;
   max-height: 80vh;
-}
+} */
 
 /*
 #iceLeft {
@@ -29,7 +30,7 @@
 }
 */
 
-.meals > .logo {
+/* .meals > .logo {
   animation: shake 1.5s infinite ease;
   color: aliceblue;
   font-family: Montserrat , sans-serif;
@@ -65,4 +66,4 @@
   100% {
     transform: rotate(-10deg);
   }
-}
+} */
