--- a/src/styles/FavoriteRecipe.css
+++ b/src/styles/FavoriteRecipe.css
@@ -1,4 +1,4 @@
-img {
+.imgRecipes {
     align-items: center;
     display: flex;
     height: 100%;
@@ -8,3 +8,22 @@ img {
     padding: 20px;
     width: 100%;
   }
+
+button {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  object-fit: cover;
+  /* padding: 20px; */
+  width: 15%;
+}
+
+.buttons {
+  display: flex;
+}
+
+.imgBtn {
+  width: 100%;
+  height: 100%;
+}
