--- a/src/styles/FavoriteRecipe.css
+++ b/src/styles/FavoriteRecipe.css
@@ -1,13 +1,12 @@
 .imgRecipes {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    margin-top: 50px;
-    object-fit: cover;
-    padding: 20px;
-    width: 100%;
-  }
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  margin-top: 0;
+  padding: 20px;
+  width: 100%;
+}
 
 button {
   align-items: center;
@@ -15,7 +14,6 @@ button {
   justify-content: center;
   margin-top: 50px;
   object-fit: cover;
-  /* padding: 20px; */
   width: 15%;
 }
 
@@ -24,6 +22,17 @@ button {
 }
 
 .imgBtn {
-  width: 100%;
   height: 100%;
+  width: 100%;
+}
+
+.filters {
+  display: flex;
+  height: 500px;
+  position: absolute;
+  width: 100%;
+}
+
+ul {
+  margin-top: 200px;
 }
