--- a/src/styles/Drinks.css
+++ b/src/styles/Drinks.css
@@ -6,18 +6,145 @@
 }
 
 .drinks-page h1 {
+  color: white;
   font-size: 2rem;
-  font-weight: 500;
-  margin: 3rem 0;
+  font-weight: 900;
+  margin: 1.5rem 0;
+  text-shadow: 0 0 1rem black;
 }
 
-.drinks-card img {
-  align-items: center;
-  display: flex;
+.drinks-list-image {
   height: 100%;
-  justify-content: center;
-  margin-top: 50px;
-  object-fit: cover;
-  padding: 20px;
   width: 100%;
+}
+
+.drinks-container {
+  margin-top: 50px;
+  width: 100%;
+}
+
+.drink-card {
+  background-color: whitesmoke;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  display: inline-block;
+  height: 100%;
+  margin: 20px;
+  overflow: hidden;
+  padding: 2px;
+  width: 20%;
+}
+
+.drink-card img {
+  height: 100%;
+  width: 100%;
+}
+
+.drink-icon img {
+  animation: shake 1s infinite ease;
+  height: 50px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  transition: all 0.5s ease-in-out;
+}
+
+@keyframes shake {
+
+  0% {
+
+    /* transform: rotate(5deg); */
+    scale: 1.1;
+  }
+
+  50% {
+
+    /* transform: rotate(-5deg); */
+    scale: 1.2;
+  }
+
+  100% {
+
+    /* transform: rotate(5deg); */
+    scale: 1.1;
+  }
+}
+
+.drinks-categories {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  justify-content: center;
+  width: 100%;
+}
+
+.all-categories {
+  background-color: #177a30d3;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 900;
+  margin: 10px;
+  padding: 10px;
+  transition: all 0.3s ease-in-out;
+  width: 100px;
+}
+
+.drinks-categories .all-categories {
+  margin: 0 auto;
+  margin-bottom: 50px;
+  margin-top: 10px;
+  width: 100px;
+}
+
+.drinks-categories-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.drinks-categories-list-img {
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+}
+
+.drinks-categories-list button {
+  background-color: rgb(243, 112, 32);
+  border: none;
+  color: black;
+  font-size: 1rem;
+  font-weight: 900;
+  margin: 5px;
+  padding: 8px;
+  transition: all 0.3s ease-in-out;
+}
+
+.drinks-categories-list button:hover {
+  background-color: rgb(241, 187, 51);
+  scale: 1.05;
+}
+
+.drinks-categories-list button:active {
+  scale: 0.95;
+}
+
+.all-categories:hover {
+  background-color: #177a30;
+  scale: 1.05;
+}
+
+.all-categories:active {
+  scale: 0.95;
+}
+
+@media screen and ( max-width : 768px ) {
+
+  .drink-card {
+    font-size: 10px;
+    margin: 5px;
+    width: 45%;
+  }
 }
