--- a/src/styles/RecipeDetails.css
+++ b/src/styles/RecipeDetails.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   padding: 0 20px;
   width: 100%;
@@ -64,12 +64,12 @@ p {
   border: 1px solid white;
   box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.5);
   display: flex;
-  height: 220px;
+  height: 230px;
   margin-bottom: 60px;
   margin-top: 10px;
   overflow: auto;
   overflow-y: hidden;
-  width: 100%;
+  width: 344px;
 }
 
 .allRecomendation img {
@@ -81,6 +81,7 @@ p {
   align-items: center;
   margin: 10px;
   text-align: center;
+  height: 150px;
 }
 
 .btnStart {
