--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,7 +1,7 @@
 .login-form {
   align-items: center;
   display: flex;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   width: 100%;
 }
