--- a/src/styles/ProgressDetails.css
+++ b/src/styles/ProgressDetails.css
@@ -1,7 +1,7 @@
 .checked {
-    text-decoration: line-through solid rgb(0, 0, 0);
+  text-decoration: line-through solid black;
 }
 
 .noChecked {
-    text-decoration:none;
+  text-decoration: none;
 }
